--- a/src/user/config.yml
+++ b/src/user/config.yml
@@ -10,6 +10,8 @@
 ##    | |   | | | (__  |   <  |  __/ | |_  \__ \   ##
 ##    |_|   |_|  \___| |_|\_\  \___|  \__| |___/   ##
 ##                                                 ##
+##    Documentation: https://discordtickets.app    ##
+##    Support:        https://lnk.earth/discord    ##
 #####################################################
 
 logs:
