--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
-DB_CONNECTION_URL=
-DB_PROVIDER=
-DISCORD_SECRET=
-DISCORD_TOKEN=
+DB_CONNECTION_URL=mysql://Ticket-Bot:whatareyoulookingfor@localhost:3306/Ticket-Bot
+DB_PROVIDER=mysql
+DISCORD_SECRET=sOAJf-fCz-5hEWSSzqfbYzEMCL3TtSa7
+DISCORD_TOKEN=MTM3Mzg5MDEwNjkzMDIzMzQxNA.GUehlf.UAZoq5Xz-MaX8PzssarKaKfZ-jtpoG04I1fujA
 ENCRYPTION_KEY=71a4b3a558bf0b83663a30d692454bc9235f3f7a6e1d1aa3
-HTTP_EXTERNAL=http://127.0.0.1:8169
+HTTP_EXTERNAL=https://ticket.discord.zenkho.top
 HTTP_HOST=0.0.0.0
 HTTP_INTERNAL=
 HTTP_PORT=8169
-HTTP_TRUST_PROXY=false
+HTTP_TRUST_PROXY=true
 INVALIDATE_TOKENS=
 NODE_ENV=production
 OVERRIDE_ARCHIVE=
 PUBLIC_BOT=false
 PUBLISH_COMMANDS=false
-SUPER=319467558166069248
+SUPER=917970047325077615
