--- a/Bot/.env
+++ b/Bot/.env
@@ -1,13 +1,13 @@
-DB_CONNECTION_URL=mysql://Ticket-Bot:whatareyoulookingfor@localhost:3306/Ticket-Bot
+DB_CONNECTION_URL=
 DB_PROVIDER=mysql
-DISCORD_SECRET=sOAJf-fCz-5hEWSSzqfbYzEMCL3TtSa7
-DISCORD_TOKEN=MTM3Mzg5MDEwNjkzMDIzMzQxNA.GUehlf.UAZoq5Xz-MaX8PzssarKaKfZ-jtpoG04I1fujA
+DISCORD_SECRET=
+DISCORD_TOKEN=
 ENCRYPTION_KEY=71a4b3a558bf0b83663a30d692454bc9235f3f7a6e1d1aa3
-HTTP_EXTERNAL=https://ticket.discord.zenkho.top
+HTTP_EXTERNAL=http://127.0.0.1:8169
 HTTP_HOST=0.0.0.0
 HTTP_INTERNAL=
 HTTP_PORT=8169
-HTTP_TRUST_PROXY=true
+HTTP_TRUST_PROXY=false
 INVALIDATE_TOKENS=
 NODE_ENV=production
 OVERRIDE_ARCHIVE=
